=head1 NAME

HISTORY - public release history for Data::Dumper

=head1 DESCRIPTION

=over 8

=item 2.126 (Apr 15 2010)

Fix Data::Dumper's Fix Terse(1) + Indent(2):
perl-RT #73604: When $Data::Dumper::Terse is true, the indentation is thrown
off. It appears to be acting as if the $VAR1 = is still there.

=item 2.125 (Aug  8 2009)

CPAN distribution fixes (meta information for META.yml).

=item 2.124 (Jun 13 2009)

Add three missing test files.

=item 2.123 (Jun 11 2009)

Re-add the INSTALLDIRS => 'perl' directive to Makefile.PL
of the CPAN release.

=item 2.122 (Jun  9 2009)

Promote previous developer release to stable release.

=item 2.121_20 (Jun  6 2009)

A host of bug fixes and improvements that have
accumulated in the perl core

Updated backport to 5.6.1 by Steffen Mueller <smueller@cpan.org>.

=item 2.121 (Aug 24 2003)

Backport to 5.6.1 by Ilya Martynov <ilya@martynov.org>.

=item 2.11  (unreleased)

C<0> is now dumped as such, not as C<'0'>.

qr// objects are now dumped correctly (provided a post-5.005_58)
overload.pm exists).

Implemented $Data::Dumper::Maxdepth, which was on the Todo list.
Thanks to John Nolan <jpnolan@Op.Net>.

=item 2.101 (30 Apr 1999)

Minor release to sync with version in 5.005_03.  Fixes dump of
dummy coderefs.

=item 2.10  (31 Oct 1998)

Bugfixes for dumping related undef values, globs, and better double
quoting: three patches suggested by Gisle Aas <gisle@aas.no>.

Escaping of single quotes in the XS version could get tripped up
by the presence of nulls in the string.  Fix suggested by
Slaven Rezic <eserte@cs.tu-berlin.de>.

Rather large scale reworking of the logic in how seen values
are stashed. Anonymous scalars that may be encountered while
traversing the structure are properly tracked, in case they become
used in data dumped in a later pass.  There used to be a problem
with the previous logic that prevented such structures from being
dumped correctly.

Various additions to the testsuite.

=item 2.09  (9 July 1998)
