@@ -11,5 +11,6 @@ t/dumper.t
 t/freezer.t
 t/overload.t
 t/pair.t
+t/perl-74170.t
 t/terse.t
 Todo
